--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -25,4 +25,13 @@ h3{
     font-weight: bold;
     line-height: 1.2;
 }
-
+.main-header {
+  text-align: center;
+  font-size: 36px;
+  font-family: "Circe";
+  color: rgb(0, 146, 197);
+  font-weight: bold;
+  text-transform: uppercase;
+  line-height: 1;
+  margin-bottom: 41px;
+}
