--- a/css/build.css
+++ b/css/build.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 body {
-  font-family: 'PFAgoraSerifPro', sans-serif; }
+  font-family: 'Circe', sans-serif; }
 
 a {
   cursor: pointer !important; }
@@ -18,7 +18,7 @@ input {
   color: #44afd4; }
 
 .fw-bold {
-  font-family: 'PFAgoraSerifProB', sans-serif; }
+  font-weight: bold; }
 
 .mb43 {
   margin-bottom: 43px; }
@@ -259,6 +259,11 @@ button {
     color: white;
     line-height: 1; }
 
+.btn-menu {
+  background: transparent;
+  border: 0;
+  padding: 0; }
+
 .breadcrumbs .breadcrumb-item {
   font-size: 14px;
   cursor: pointer;
@@ -279,6 +284,11 @@ button {
   padding-top: 10px;
   padding-bottom: 25px;
   border-bottom: 1px solid #afafaf; }
+  @media (max-width: 991px) {
+    .header-container {
+      padding-bottom: 8px;
+      padding-top: 24px;
+      border-bottom: 0; } }
   .header-container p {
     margin-bottom: 0;
     line-height: 1; }
@@ -295,6 +305,10 @@ button {
       margin: auto; }
   .header-container .city-block {
     display: flex; }
+    @media (max-width: 991px) {
+      .header-container .city-block {
+        margin-bottom: 36px;
+        justify-content: center; } }
     .header-container .city-block .name {
       font-size: 18px;
       color: #232222;
@@ -311,12 +325,21 @@ button {
     display: flex;
     flex-wrap: wrap;
     text-align: center; }
+  @media (max-width: 991px) {
+    .header-container .logo {
+      text-align: center;
+      margin-bottom: 36px; } }
   .header-container .phone-block {
     display: flex; }
+    @media (max-width: 991px) {
+      .header-container .phone-block {
+        margin-bottom: 36px;
+        justify-content: center; } }
     .header-container .phone-block p {
       text-align: left; }
     .header-container .phone-block .phone {
       font-size: 24px;
+      font-weight: bold;
       color: #232222;
       line-height: 1.25; }
     .header-container .phone-block .region {
@@ -325,6 +348,28 @@ button {
       color: #232222;
       line-height: 1;
       margin-bottom: 0; }
+
+.mobile-menu-container {
+  display: none; }
+  @media (max-width: 991px) {
+    .mobile-menu-container {
+      display: block; } }
+  .mobile-menu-container .mobile-menu {
+    align-items: center;
+    background-color: #f7f9fc;
+    height: 44px;
+    padding-left: 13px;
+    padding-right: 6px; }
+    .mobile-menu-container .mobile-menu .button.btn-blue {
+      padding-top: 7px;
+      padding-bottom: 7px;
+      font-size: 14px;
+      font-family: "Gilroy";
+      font-weight: 300;
+      color: white;
+      line-height: 1.2; }
+      .mobile-menu-container .mobile-menu .button.btn-blue img {
+        margin-right: 20px; }
 
 .main-section {
   padding-top: 88px;
@@ -716,6 +761,9 @@ button {
 
 .header-slider {
   position: relative; }
+  @media (max-width: 991px) {
+    .header-slider {
+      display: none; } }
   .header-slider .slider-arrow {
     z-index: 3;
     cursor: pointer;
@@ -813,6 +861,16 @@ button {
           margin-left: auto;
           margin-right: auto;
           max-height: initial; }
+
+@media (min-width: 992px) {
+  .mobile-header-slider-section {
+    display: none; } }
+.mobile-header-slider-section .owl-dots {
+  transform: translateY(-40px); }
+  .mobile-header-slider-section .owl-dots .owl-dot.active span {
+    background: #0092c5; }
+  .mobile-header-slider-section .owl-dots .owl-dot span {
+    background: white; }
 
 .subscribe-section {
   padding-top: 61px;
@@ -925,7 +983,7 @@ button {
         .top-nav .top-nav--row .top-nav--item a:hover:before, .top-nav .top-nav--row .top-nav--item a .active:before {
           content: '';
           position: absolute;
-          top: -12px;
+          top: -8px;
           width: 100%;
           background: #44afd4;
           height: 1px;
@@ -935,7 +993,7 @@ button {
         .top-nav .top-nav--row .top-nav--item a:hover:after, .top-nav .top-nav--row .top-nav--item a .active:after {
           content: '';
           position: absolute;
-          bottom: -12px;
+          bottom: -9px;
           left: 0;
           right: 0;
           margin: auto;
@@ -948,6 +1006,9 @@ button {
 .social-block {
   display: flex;
   margin-top: 16px; }
+  @media (max-width: 991px) {
+    .social-block {
+      justify-content: center; } }
   .social-block .social-block-item {
     margin-right: 6px;
     width: 24px;
@@ -972,6 +1033,16 @@ footer {
   height: 370px;
   background-image: url("../assets/bg-footer.png");
   padding-top: 75px; }
+  @media (max-width: 991px) {
+    footer {
+      background-image: url("../assets/bg-footer-mobile.png");
+      height: 575px;
+      background-size: cover;
+      padding-top: 29px;
+      padding-bottom: 95px; } }
+  @media (max-width: 991px) {
+    footer .pic-block {
+      margin-bottom: 60px; } }
   footer .copyright {
     font-size: 12px;
     line-height: 1.2;
@@ -982,14 +1053,18 @@ footer {
     font-size: 18px;
     color: #333333;
     line-height: 1.2;
-    font-family: 'PFAgoraSerifProB', sans-serif; }
+    font-family: 'Circe', sans-serif; }
   footer .footer-menu .footer-menu--name {
     font-size: 18px;
     color: #333333;
-    font-family: 'PFAgoraSerifProB', sans-serif;
+    font-family: 'Circe', sans-serif;
+    font-weight: bold;
     line-height: 1.2;
     text-transform: uppercase;
     margin-bottom: 8px; }
+    @media (max-width: 991px) {
+      footer .footer-menu .footer-menu--name {
+        text-align: center; } }
   footer .footer-menu .footer-menu--item {
     color: #333333;
     font-size: 14px;
@@ -1001,6 +1076,9 @@ footer {
     display: flex;
     margin-bottom: 31px;
     margin-top: 16px; }
+    @media (max-width: 991px) {
+      footer .payment-block {
+        justify-content: center; } }
     footer .payment-block .payment-item {
       border-radius: 20px;
       background-color: white;
@@ -1008,6 +1086,8 @@ footer {
       height: 41px;
       margin-right: 25px;
       display: flex; }
+      footer .payment-block .payment-item:last-of-type {
+        margin-right: 0; }
       footer .payment-block .payment-item img {
         margin: auto; }
 
@@ -1245,3 +1325,33 @@ footer {
       font-family: "Circe";
       color: white;
       width: 199px; }
+
+.mobile-modal-menu-container {
+  padding-top: 9px;
+  padding-right: 10px;
+  padding-left: 51px;
+  margin: 0;
+  background: transparent;
+  border: 0;
+  border-radius: 0; }
+  .mobile-modal-menu-container .btn-menu {
+    margin-bottom: 62px;
+    text-align: right; }
+  .mobile-modal-menu-container .menu-name {
+    font-size: 18px;
+    font-family: "Circe";
+    font-weight: 300;
+    text-transform: uppercase;
+    color: white;
+    line-height: 1.2;
+    text-align: left;
+    margin-bottom: 10px; }
+  .mobile-modal-menu-container .menu-list {
+    list-style: none;
+    padding-left: 0;
+    margin-bottom: 25px; }
+    .mobile-modal-menu-container .menu-list a {
+      font-size: 14px;
+      font-family: "Circe";
+      font-weight: 300;
+      color: white; }
