--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -1,5 +1,5 @@
 body{
-  font-family: 'PFAgoraSerifPro', sans-serif;
+  font-family: 'Circe', sans-serif;
 }
 $black:rgb(35, 34, 34);
 $blue:#44afd4;
@@ -20,7 +20,7 @@ input{
   color: $blue;
 }
 .fw-bold{
-  font-family: 'PFAgoraSerifProB', sans-serif;
+  font-weight: bold;
 }
 .mb43{
   margin-bottom: 43px;
