--- a/scss/_sliders.scss
+++ b/scss/_sliders.scss
@@ -9,12 +9,19 @@
     h1 {
       margin-bottom: 34px;
     }
+    @media (max-width:991px) {
+      padding-top: 30px;
+      padding-bottom: 50px;
+    }
   }
   .gray-splitter {
     width: 160px;
     margin-right: 12px;
     margin-left: 12px;
     position: relative;
+    @media (max-width:991px){
+      display: none;
+    }
     &:before {
       position: absolute;
       content: '';
@@ -36,7 +43,9 @@
       background-color: rgba(0, 0, 0, .2);
       width: 45px;
       border: 0;
-
+      @media(max-width:991px){
+        display: none;
+      }
       &:hover {
         background: #0092c5;
       }
@@ -65,6 +74,9 @@
     display: flex;
     justify-content: center;
     border-bottom: 1px solid rgb(208, 210, 215);
+    @media(max-width: 991px){
+      display: none;
+    }
     .slider-nav--item {
       margin-right: 25px;
       margin-left: 25px;
@@ -117,6 +129,10 @@
       text-align: center;
       padding-top: 31px;
       position: relative;
+      @media (max-width: 991px) {
+        width: 300px;
+        margin: auto;
+      }
       &:hover {
         padding-top: 30px;
         border: 1px solid $blue;
@@ -139,6 +155,7 @@
           font-size: 18px;
           margin-bottom: 0;
           line-height: 1;
+          margin-top: 5px;
           margin-left: -5px;
         }
         .text {
