--- a/scss/_item-collections.scss
+++ b/scss/_item-collections.scss
@@ -1,11 +1,19 @@
 .item-collections {
   justify-content: space-between;
   width: 1170px;
+  @media (max-width: 991px) {
+    width: 300px;
+    margin: auto;
+  }
   .item {
     position: relative;
     width: 372px;
     height: 372px;
     margin-bottom: 26px;
+    overflow: hidden;
+    @media (max-width: 991px) {
+      width: 100%;
+    }
     .img-bg {
       position: absolute;
       top: 0;
@@ -13,15 +21,34 @@
       width: 100%;
       height: 100%;
       z-index: 1;
+      @media (max-width: 991px) {
+        height: initial;
+        width: initial;
+      }
     }
     &.width-item {
       width: 771px;
       height: 372px;
+      @media (max-width: 991px) {
+        width: 100%;
+        .img-bg {
+          position: absolute;
+          top: 0;
+          left: -310px;
+          width: initial;
+          z-index: 1;
+        }
+      }
       .item-content {
         justify-content: space-between;
         padding-left: 42px;
         padding-bottom: 119px;
         padding-top: 126px;
+        @media (max-width: 991px) {
+          padding-left: 30px;
+          padding-bottom: 30px;
+          padding-top: 30px;
+        }
       }
     }
     .item-content {
@@ -35,18 +62,22 @@
       flex-direction: column;
       justify-content: flex-end;
       padding: 33px 51px;
+      @media (max-width: 991px) {
+        padding: 30px 30px;
+      }
       &.centered {
         align-items: center;
         text-align: center;
       }
       .item-name {
         font-size: 24px;
-        font-family: "PFAgoraSerifProB";
+        font-family: "Circe";
+        font-weight: bold;
         color: rgb(0, 0, 0);
         text-transform: uppercase;
         line-height: 1.2;
       }
-      .button{
+      .button {
         width: 225px;
         padding-left: 0;
         padding-right: 0;
