--- a/scss/_main-section.scss
+++ b/scss/_main-section.scss
@@ -1,4 +1,8 @@
 .main-section{
   padding-top: 88px ;
   padding-bottom: 198px;
+  @media (max-width: 991px){
+    padding-top: 30px;
+    padding-bottom: 60px;
+  }
 }
