--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -26,5 +26,7 @@ input{
   margin-bottom: 43px;
 }
 .bg-white-uzor{
-  background-image: url('../assets/bg-white.png');
+  background-image: url('../assets/bg-white-uzor.png');
+  background-size: cover;
+  background-repeat: no-repeat;
 }
