--- a/scss/_catalog.scss
+++ b/scss/_catalog.scss
@@ -9,7 +9,6 @@
   .catalog-menu {
     .menu-row {
       border: 1px solid rgb(221, 221, 221);
-
     }
     .catalog-menu-item {
       display: flex;
@@ -50,6 +49,14 @@
     }
   }
   .catalog-grid-container {
+    > .row{
+      @media (max-width: 991px) {
+        justify-content: space-between;
+      }
+      @media (max-width: 767px) {
+        justify-content: center;
+      }
+    }
     .catalog-item {
       background-color: white;
       height: 500px;
@@ -62,6 +69,12 @@
       margin-right: 15px;
       &:nth-of-type(3n) {
         margin-right: 0;
+      }
+      @media(max-width:991px){
+        margin: 0 0 30px;
+        &:nth-of-type(3n) {
+          margin-right: 0;
+        }
       }
       &:hover {
         border: 1px solid $blue;
@@ -85,6 +98,7 @@
           margin-bottom: 0;
           line-height: 1;
           margin-left: -5px;
+          margin-bottom: 5px;
         }
         .text {
           font-size: 11px;
