--- a/scss/_sales.scss
+++ b/scss/_sales.scss
@@ -7,6 +7,14 @@
     padding-right: 180px;
     margin-left: -35px;
     margin-right: -35px;
+    @media (max-width: 991px){
+      margin-left: 0;
+      margin-right: 0;
+      padding-right: 0;
+      background: #f9fffd !important;
+      border: 1px solid $blue;
+      height: 400px;
+    }
     background-size: cover;
     border: 1px solid rgb(221, 221, 221);
     position: relative;
@@ -23,6 +31,10 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      @media (max-width: 991px){
+        width: 80px;
+        height: 80px;
+      }
       p {
         margin-bottom: 0;
       }
@@ -35,6 +47,10 @@
         line-height: 1;
         text-align: center;
         margin-bottom: 16px;
+        @media(max-width: 991px){
+          font-size: 14px;
+          margin-bottom: 8px;
+        }
       }
       .value {
         font-size: 30px;
@@ -44,32 +60,60 @@
         text-transform: uppercase;
         line-height: 1;
         text-align: center;
+        @media(max-width: 991px){
+          font-size: 16px;
+        }
       }
     }
     &:nth-of-type(1) {
       background-image: url('../assets/sale-promo1.png');
       .sale-floating-item {
-        bottom: 19px;
-        left: 15px;
+
+        @media (max-width: 991px) {
+          top: -25px;
+          right: -15px;
+        }
+        @media (min-width: 992px) {
+          bottom: 19px;
+          left: 15px;
+        }
       }
     }
     &:nth-of-type(2) {
       background-image: url('../assets/sale-promo2.png');
       .sale-floating-item {
-        bottom: 19px;
-        left: 404px;
+
+        @media (max-width: 991px) {
+          top: -25px;
+          right: -15px;
+        }
+        @media (min-width: 992px) {
+          bottom: 19px;
+          left: 404px;
+        }
       }
     }
     &:nth-of-type(3) {
       background-image: url('../assets/sale-promo3.png');
       .sale-floating-item {
-        bottom: 19px;
-        left: 15px;
+        @media (max-width: 991px) {
+          top: -25px;
+          right: -15px;
+        }
+        @media (min-width: 992px) {
+          bottom: 19px;
+          left: 15px;
+        }
       }
     }
     .sale-text-block {
       width: 242px;
       margin-left: auto;
+      @media (max-width: 991px) {
+        width: 100%;
+        padding-left: 15px;
+        padding-right: 15px;
+      }
       h5 {
         font-size: 24px;
         font-family: "Circe";
