--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -34,4 +34,7 @@ h3{
   text-transform: uppercase;
   line-height: 1;
   margin-bottom: 41px;
+  @media(max-width: 991px){
+    font-size: 26px;
+  }
 }
