--- a/scss/_franshize.scss
+++ b/scss/_franshize.scss
@@ -4,8 +4,16 @@
   background-size: cover;
   height: 637px;
   padding-top: 101px;
+  @media (max-width: 991px){
+    height: auto;
+    -ms-background-position-x: 20%;
+    background-position-x: 20%;
+  }
   .main-text {
     font-size: 47px;
+    @media (max-width: 991px){
+      font-size: 37px;
+    }
     font-family: "Circe";
     color: rgb(255, 255, 255);
     font-weight: bold;
@@ -16,6 +24,9 @@
   }
   .secondary-text {
     font-size: 36px;
+    @media (max-width: 991px){
+      font-size: 26px;
+    }
     font-family: "Circe";
     color: rgb(0, 146, 197);
     font-weight: 400;
@@ -47,6 +58,12 @@
     border: 1px solid rgb(221, 221, 221);
     background: white;
     height: 414px;
+    @media (max-width: 768px) {
+      height: 414px;
+    }
+    @media (max-width: 991px) {
+      height: 430px;
+    }
     &:hover {
       background: #f7f7f7;
       border: 1px solid #f7f7f7;
@@ -188,6 +205,12 @@
       margin-bottom: 44px;
       .value-text {
         font-size: 24px;
+        @media (max-width: 768px){
+          font-size: 18px;
+        }
+        @media (max-width: 991px){
+          font-size: 20px;
+        }
         font-family: "Circe";
         color: rgb(60, 60, 60);
         font-weight: bold;
@@ -208,6 +231,9 @@
   .director-description-container {
     max-width: 585px;
     padding: 0;
+    @media (max-width: 991px){
+      padding:24px 15px
+    }
     .main-header {
       text-align: left;
       margin-bottom: 30px;
@@ -238,6 +264,9 @@
   padding-bottom: 56px;
   .franshize-email-text {
     font-size: 30px;
+    @media (max-width:991px) {
+      font-size: 24px;
+    }
     font-family: "Circe";
     color: rgb(255, 255, 255);
     font-weight: bold;
@@ -248,6 +277,10 @@
   .franshize-email-form {
     display: flex;
     justify-content: space-between;
+    @media(max-width: 991px){
+      justify-content: center;
+      flex-wrap: wrap;
+    }
     align-items: center;
     padding-left: 15px;
     padding-right: 15px;
@@ -262,6 +295,11 @@
       border: 0;
       margin-right: 15px;
       line-height: 1.2;
+      @media(max-width: 991px){
+        width: 100%;
+        margin-bottom: 16px;
+        margin-right: 0;
+      }
       &::placeholder {
         font-size: 18px;
         font-family: "Circe";
