--- a/css/build.css
+++ b/css/build.css
@@ -335,13 +335,40 @@ button {
     .header-container .city-block .change-city {
       font-size: 11px;
       color: #232222;
-      padding-left: 10px; }
+      padding-left: 10px;
+      cursor: pointer;
+      top: -8px;
+      position: relative; }
+      .header-container .city-block .change-city:hover {
+        text-decoration: underline; }
       .header-container .city-block .change-city img {
         margin-left: 10px; }
   .header-container .content {
     display: flex;
     flex-wrap: wrap;
     text-align: center; }
+    .header-container .content.content-city {
+      position: relative; }
+      .header-container .content.content-city .change-city-popup {
+        top: 45px;
+        position: absolute;
+        border: 2px solid #0c97c7;
+        background-color: white;
+        box-shadow: 0px 4px 20px 0px rgba(3, 7, 14, 0.4);
+        width: 310px;
+        height: 132px;
+        z-index: 9999;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: flex-start;
+        padding-left: 26px; }
+        .header-container .content.content-city .change-city-popup span {
+          font-size: 18px;
+          color: #333333;
+          line-height: 1.2; }
+        .header-container .content.content-city .change-city-popup .btn-blue {
+          margin-right: 16px; }
   @media (max-width: 991px) {
     .header-container .logo {
       text-align: center;
@@ -1559,3 +1586,66 @@ footer {
       font-family: "Circe";
       font-weight: 300;
       color: white; }
+
+@media (min-width: 992px) {
+  .modal-dialog.city-modal {
+    max-width: 631px; } }
+@media (min-width: 992px) {
+  .modal-dialog.call-modal {
+    max-width: 631px; } }
+
+.custom-modal {
+  border: 0; }
+  .custom-modal.city {
+    background: url("../assets/border-image-city1.png");
+    padding: 12px;
+    background-size: cover; }
+    @media (max-width: 991px) {
+      .custom-modal.city {
+        padding: 0; } }
+  .custom-modal.call {
+    background: url("../assets/border-image-callback.png");
+    padding: 12px;
+    background-size: cover; }
+    @media (max-width: 991px) {
+      .custom-modal.call {
+        padding: 0; } }
+    .custom-modal.call input {
+      margin-bottom: 22px !important; }
+    .custom-modal.call h2 {
+      margin-bottom: 42px !important; }
+  .custom-modal .custom-modal-container {
+    display: flex;
+    flex-wrap: wrap;
+    background: white;
+    padding: 13px 49px;
+    justify-content: center; }
+    .custom-modal .custom-modal-container h2 {
+      width: 100%;
+      font-size: 30px;
+      margin-bottom: 26px; }
+    .custom-modal .custom-modal-container input {
+      border: 1px solid #060606;
+      border-radius: 20px;
+      background-color: white;
+      width: 100%;
+      height: 40px;
+      padding-left: 16px;
+      font-size: 18px;
+      font-family: "Circe";
+      color: #333333;
+      line-height: 1.2;
+      margin-bottom: 13px; }
+    .custom-modal .custom-modal-container .btn-menu {
+      margin-top: 0;
+      margin-right: -34px; }
+    .custom-modal .custom-modal-container .text-support {
+      font-size: 14px;
+      font-family: "Circe";
+      color: #333333;
+      line-height: 1.2;
+      text-align: left;
+      width: 100%; }
+    .custom-modal .custom-modal-container button {
+      margin-top: 24px;
+      margin-bottom: 37px; }
