--- a/scss/_header-container.scss
+++ b/scss/_header-container.scss
@@ -45,6 +45,12 @@
       font-size: 11px;
       color: rgb(35, 34, 34);
       padding-left: 10px;
+      cursor: pointer;
+      top: -8px;
+      position: relative;
+      &:hover {
+        text-decoration: underline;
+      }
       img {
         margin-left: 10px;
       }
@@ -54,6 +60,33 @@
     display: flex;
     flex-wrap: wrap;
     text-align: center;
+    &.content-city{
+      position: relative;
+      .change-city-popup {
+        top:45px;
+        position: absolute;
+        border: 2px solid rgb(12, 151, 199);
+        background-color: rgb(255, 255, 255);
+        box-shadow: 0px 4px 20px 0px rgba(3, 7, 14, 0.4);
+        width: 310px;
+        height: 132px;
+        z-index: 9999;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: flex-start;
+        padding-left: 26px;
+        span {
+          font-size: 18px;
+          color: rgb(51, 51, 51);
+          line-height: 1.2;
+
+        }
+        .btn-blue{
+          margin-right: 16px;
+        }
+      }
+    }
   }
   .logo {
     @media(max-width: 991px) {
