--- a/scss/_sliders.scss
+++ b/scss/_sliders.scss
@@ -8,6 +8,9 @@
     padding-top: 116px;
     h1 {
       margin-bottom: 34px;
+      @media (max-width:991px) {
+
+      }
     }
     @media (max-width:991px) {
       padding-top: 30px;
