--- a/scss/build.scss
+++ b/scss/build.scss
@@ -7,6 +7,7 @@
 @import "main-section";
 @import "about";
 @import "tiles";
+@import "item-section";
 @import "sales";
 @import "magazines";
 @import "sliders";
