--- a/css/build.css
+++ b/css/build.css
@@ -41,6 +41,9 @@ input {
 
 h1 {
   font-size: 36px; }
+  @media (max-width: 991px) {
+    h1 {
+      font-size: 24px; } }
 
 h2 {
   font-size: 24px;
@@ -517,6 +520,79 @@ button {
       margin-top: 4px; }
     .tiles .tile-item img {
       margin-bottom: 67px; }
+
+.item-section {
+  padding-top: 52px;
+  padding-bottom: 90px; }
+  @media (max-width: 991px) {
+    .item-section {
+      padding-top: 30px;
+      padding-bottom: 40px; } }
+  .item-section .catalog-item-slider-container {
+    margin-bottom: 40px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap; }
+    .item-section .catalog-item-slider-container .image-preview-container {
+      width: 100%;
+      border: 1px solid #e4e4e4;
+      margin-bottom: 12px; }
+      .item-section .catalog-item-slider-container .image-preview-container img {
+        max-width: 100%;
+        width: 100%; }
+    .item-section .catalog-item-slider-container .image-thumb {
+      width: 22%;
+      border: 1px solid #e4e4e4;
+      margin-bottom: 14px; }
+      .item-section .catalog-item-slider-container .image-thumb:hover, .item-section .catalog-item-slider-container .image-thumb.active {
+        border-color: #44afd4; }
+      .item-section .catalog-item-slider-container .image-thumb img {
+        max-width: 100%;
+        width: 100%; }
+  .item-section .catalog-item-description-container {
+    padding-left: 40px; }
+    @media (max-width: 991px) {
+      .item-section .catalog-item-description-container {
+        padding-left: 15px; } }
+    .item-section .catalog-item-description-container .main-header {
+      width: 50%;
+      line-height: 1.2;
+      margin-bottom: 30px; }
+    .item-section .catalog-item-description-container .p-more-info {
+      font-size: 24px;
+      font-weight: bold;
+      line-height: 1.2; }
+    .item-section .catalog-item-description-container .p-item-description {
+      font-size: 18px;
+      font-family: "Circe";
+      color: black;
+      line-height: 1.2;
+      margin-bottom: 3px; }
+    .item-section .catalog-item-description-container .splitter {
+      height: 1px;
+      width: 100%;
+      background-color: #e4e4e4;
+      margin-bottom: 20px; }
+      .item-section .catalog-item-description-container .splitter:first-of-type {
+        margin-top: 30px; }
+    .item-section .catalog-item-description-container .old-price {
+      font-size: 24px;
+      font-family: "Circe";
+      color: #b0b0b0;
+      font-weight: bold;
+      text-decoration: line-through;
+      line-height: 1.2;
+      margin-bottom: 5px; }
+    .item-section .catalog-item-description-container .current-price {
+      font-size: 36px;
+      color: black;
+      font-weight: bold;
+      line-height: 1.2; }
+    .item-section .catalog-item-description-container button.outline-gray {
+      margin-top: 8px;
+      font-size: 18px;
+      text-align: center;
+      width: 185px; }
 
 .sales {
   padding-top: 49px;
