--- a/scss/_item-section.scss
+++ b/scss/_item-section.scss
@@ -14,7 +14,41 @@
     .image-preview-container{
       width: 100%;
       border: 1px solid #e4e4e4;
+      position: relative;
       margin-bottom: 12px;
+      .promo-label {
+        border-radius: 100%;
+        position: absolute;
+        right: 15px;
+        top: 19px;
+        width: 53px;
+        height: 53px;
+        color: white;
+        background-color: rgb(249, 145, 145);
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        font-weight: bold;
+        .sale-amount {
+          font-size: 18px;
+          margin-bottom: 0;
+          line-height: 1;
+          margin-top: 5px;
+        }
+        .text {
+          font-size: 11px;
+          margin-bottom: 0;
+          margin-top: -16px;
+        }
+        &.new {
+
+          background-color: rgb(107, 107, 107);
+          font-size: 18px;
+          text-transform: uppercase;
+        }
+      }
+
       img{
         max-width: 100%;
         width: 100%;
